--- a/app/src/main/res/layout/dialog_business_source.xml
+++ b/app/src/main/res/layout/dialog_business_source.xml
@@ -53,7 +53,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/shortCode"
+                        android:id="@+id/businessSource_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
@@ -79,7 +79,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/transportationModeText"
+                        android:id="@+id/b_short_code_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
