--- a/app/src/main/res/layout/fragment_add_reservation.xml
+++ b/app/src/main/res/layout/fragment_add_reservation.xml
@@ -254,6 +254,7 @@
                                     android:hint="Rate Type">
 
                                     <com.google.android.material.textfield.TextInputEditText
+                                        android:id="@+id/rateType_text"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:fontFamily="@font/roboto"
@@ -326,6 +327,7 @@
                                     android:hint="Booking Type">
 
                                     <com.google.android.material.textfield.TextInputEditText
+                                        android:id="@+id/bookingType_text"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
                                         android:fontFamily="@font/roboto"
@@ -908,7 +910,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     android:layout_marginStart="12dp"
                     app:layout_constraintTop_toBottomOf="@id/txt_from"
-                    android:text="12 Mar 2023"
+                    android:text=""
                     />
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="100dp"
@@ -979,7 +981,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     android:layout_marginEnd="12dp"
                     app:layout_constraintTop_toBottomOf="@id/txt_from"
-                    android:text="16 Mar 2023"/>
+                    android:text=""/>
                 <TextView
                     android:id="@+id/room_charges"
                     android:layout_width="wrap_content"
@@ -1004,7 +1006,7 @@
                     android:layout_marginEnd="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/date_from"
-                    android:text="₹ 2,22,999.00"/>
+                    android:text="₹ 00.00"/>
                 <TextView
                     android:id="@+id/extra"
                     android:layout_width="wrap_content"
@@ -1029,7 +1031,7 @@
                     android:layout_marginEnd="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/room_charges"
-                    android:text="₹ 2,22,999.00"/>
+                    android:text="₹ 00.00"/>
                 <TextView
                     android:id="@+id/taxes"
                     android:layout_width="wrap_content"
@@ -1054,7 +1056,7 @@
                     android:layout_marginEnd="12dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/extra"
-                    android:text="₹ 2,22,999.00"/>
+                    android:text="₹ 00.00"/>
                 <TextView
                     android:id="@+id/gst"
                     android:layout_width="wrap_content"
@@ -1066,7 +1068,7 @@
                     android:layout_marginEnd="12dp"
                     app:layout_constraintStart_toStartOf="@id/date_from"
                     app:layout_constraintTop_toBottomOf="@id/taxes"
-                    android:text="GST 16%   ₹ 2,22,999.00"/>
+                    android:text="GST 16%   ₹ 00.00"/>
                 <View
                     android:id="@+id/line"
                     android:layout_width="match_parent"
@@ -1100,7 +1102,7 @@
                     android:layout_marginStart="10dp"
                     app:layout_constraintTop_toBottomOf="@id/line"
                     android:layout_marginTop="9dp"
-                    android:text="₹ 2,22,999.00"/>
+                    android:text="₹ 00.00"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
