--- a/app/src/main/res/layout/item_recycler_room_details.xml
+++ b/app/src/main/res/layout/item_recycler_room_details.xml
@@ -51,6 +51,7 @@
             android:hint="Room Type">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/roomType_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
@@ -58,7 +59,6 @@
                 android:focusable="false"
                 android:singleLine="true"
                 android:clickable="true"
-                android:text="Premeium"
                 android:inputType="none"
                 android:textColor="@color/secondary"
                 android:textColorHint="@drawable/hint_selector"
@@ -77,13 +77,13 @@
             android:hint="Rate Plan">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ratePlan_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:editable="false"
                 android:focusable="false"
                 android:clickable="true"
-                android:text="MAP"
                 android:inputType="none"
                 android:textColor="@color/secondary"
                 android:textColorHint="@drawable/hint_selector"
@@ -331,7 +331,7 @@
                 android:fontFamily="@font/roboto_medium"
                 android:textSize="@dimen/H4"
                 android:textColor="@color/black"
-                android:text="₹ 11,999.00"/>
+                android:text="₹ 00.00"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -348,66 +348,92 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="gone"
-                android:layout_marginTop="9dp"
-                app:layout_constraintTop_toBottomOf="@id/total_price">
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/total_price"
+                >
+
                 <TextView
                     android:id="@+id/room_charge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="₹ 00.00"
                     android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="₹ 7,999.00"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toStartOf="@id/room_charge"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textColor="@color/black"
                     android:layout_marginEnd="9dp"
+                    android:text="Room Charges"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="Room Charges"/>
+                    app:layout_constraintEnd_toStartOf="@id/room_charge"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <TextView
                     android:id="@+id/ex_ad_charge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/room_charge"
                     android:layout_marginTop="9dp"
+                    android:text="₹ 00.00"
                     android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="₹ 1,000.00"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/room_charge" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toStartOf="@id/ex_ad_charge"
-                    app:layout_constraintTop_toTopOf="@id/ex_ad_charge"
-                    android:textColor="@color/black"
                     android:layout_marginEnd="9dp"
+                    android:text="Extra Child Charges"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="Extra Adult Charges"/>
+                    app:layout_constraintEnd_toStartOf="@id/ex_cc_charge"
+                    app:layout_constraintTop_toTopOf="@id/ex_cc_charge" />
+
+                <TextView
+                    android:id="@+id/ex_cc_charge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="9dp"
+                    android:text="₹ 00.00"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/H5"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ex_ad_charge" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="9dp"
+                    android:text="Extra Adult Charges"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/H5"
+                    app:layout_constraintEnd_toStartOf="@id/ex_ad_charge"
+                    app:layout_constraintTop_toTopOf="@id/ex_ad_charge" />
+
                 <TextView
                     android:id="@+id/ex_in_charge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/ex_ad_charge"
                     android:layout_marginTop="9dp"
+                    android:text="₹ 00.00"
                     android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="₹ 3,000.00"/>
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ex_cc_charge" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toStartOf="@id/ex_in_charge"
-                    app:layout_constraintTop_toTopOf="@id/ex_in_charge"
-                    android:textColor="@color/black"
                     android:layout_marginEnd="9dp"
+                    android:text="Extra Inclusions Charges"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/H5"
-                    android:text="Extra Inclusions Charges"/>
-
-
+                    app:layout_constraintEnd_toStartOf="@id/ex_in_charge"
+                    app:layout_constraintTop_toTopOf="@id/ex_in_charge" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -448,7 +474,7 @@
                 app:layout_constraintTop_toBottomOf="@id/txt_charges"
                 app:layout_constraintStart_toStartOf="@id/txt_charges"
                 app:layout_constraintEnd_toEndOf="@id/txt_charges"
-                android:text="₹ 7,999.00"
+                android:text="₹ 00.00"
                 android:textColor="@color/black"
                 android:textSize="@dimen/H5"/>
 
