--- a/app/src/main/res/layout/fragment_charges_and_rates.xml
+++ b/app/src/main/res/layout/fragment_charges_and_rates.xml
@@ -497,7 +497,8 @@
                 android:layout_marginHorizontal="20dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
-                app:layout_constraintTop_toBottomOf="@id/heading1"/>
+                app:layout_constraintTop_toBottomOf="@id/heading1"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
