--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -34,6 +34,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
+                android:text="Rah789"
                 android:textColorHint="@color/secondary"
                 android:textColor="@color/secondary" />
 
@@ -58,6 +59,7 @@
                 android:textColorHint="@color/secondary"
                 android:fontFamily="@font/roboto"
                 android:inputType="text"
+                android:text="150860"
                 android:textColor="@color/secondary" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -80,6 +82,7 @@
                 android:layout_height="match_parent"
                 android:fontFamily="@font/roboto"
                 android:inputType="textPassword"
+                android:text="123456789"
                 android:textColorHint="@color/secondary"
                 android:textColor="@color/secondary" />
 
