Post Inclusions Conditions updated

--- a/app/src/main/res/layout/dialog_create_inclusion.xml
+++ b/app/src/main/res/layout/dialog_create_inclusion.xml
@@ -46,6 +46,7 @@
                     android:weightSum="2">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/inclusionNameLayout"
                         style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -71,6 +72,7 @@
                     </com.google.android.material.textfield.TextInputLayout>
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/shortCodeLayout"
                         style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -121,7 +123,6 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:fontFamily="@font/roboto"
-                            android:text="Select Charge Rule"
                             android:textColor="@color/secondary"
                             android:textColorHint="@drawable/hint_selector"
                             android:cursorVisible="false"
@@ -168,6 +169,7 @@
                     android:weightSum="2">
 
                     <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/chargeLayout"
                         style="@style/TextInputLayoutStyle"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
