--- a/app/src/main/res/layout/fragment_rate_plan_bar.xml
+++ b/app/src/main/res/layout/fragment_rate_plan_bar.xml
@@ -11,12 +11,13 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/card1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         style="@style/CardViewTheme"
         app:cardCornerRadius="12dp"
         app:cardElevation="4dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="15dp">
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -73,13 +74,14 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 tools:listitem="@layout/item_rate_plan_details"
                 tools:itemCount="2"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="20dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/heading1"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
