--- a/app/src/main/res/layout/fragment_add_room_type.xml
+++ b/app/src/main/res/layout/fragment_add_room_type.xml
@@ -148,6 +148,9 @@
                     android:id="@+id/frame1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintVertical_bias="0.0"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/frame2">
@@ -236,10 +239,80 @@
                             android:orientation="horizontal">
 
                             <com.google.android.material.card.MaterialCardView
+                                android:id="@+id/roomsTypeInventory"
+                                android:layout_width="0dp"
+                                android:layout_height="45dp"
+                                android:layout_marginTop="5dp"
+                                app:cardCornerRadius="10dp"
+                                app:strokeWidth="0.5dp"
+                                android:layout_weight="1"
+                                app:strokeColor="@color/lightBlack"
+                                app:cardBackgroundColor="@color/white">
+
+                                <androidx.constraintlayout.widget.ConstraintLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent">
+
+                                    <TextView
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:text="Room Type Inventory"
+                                        android:textSize="14sp"
+                                        android:textColor="@color/lightBlack"
+                                        android:fontFamily="@font/roboto"
+                                        android:layout_marginStart="16dp"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintStart_toStartOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent"/>
+
+                                    <LinearLayout
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:orientation="horizontal"
+                                        android:layout_marginEnd="10dp"
+                                        android:gravity="center_vertical"
+                                        app:layout_constraintEnd_toEndOf="parent"
+                                        app:layout_constraintBottom_toBottomOf="parent"
+                                        app:layout_constraintTop_toTopOf="parent">
+
+                                        <ImageView
+                                            android:id="@+id/removeRoomTypeInventory"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:src="@drawable/svg_remove"/>
+
+                                        <TextView
+                                            android:id="@+id/roomTypeInventoryCountText"
+                                            android:layout_width="45dp"
+                                            style="@style/TextAppearance.AppCompat.Body1"
+                                            android:background="@null"
+                                            android:layout_height="wrap_content"
+                                            android:text="1"
+                                            android:maxLength="4"
+                                            android:inputType="number"
+                                            android:textAlignment="center"
+                                            android:textSize="@dimen/H5"
+                                            android:textColor="@color/black"
+                                            android:fontFamily="@font/roboto_bold"/>
+
+                                        <ImageView
+                                            android:id="@+id/addRoomTypeInventory"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:src="@drawable/svg_add"/>
+
+                                    </LinearLayout>
+
+                                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                            </com.google.android.material.card.MaterialCardView>
+
+                            <com.google.android.material.card.MaterialCardView
                                 android:id="@+id/roomsInPL"
                                 android:layout_width="0dp"
                                 android:layout_height="45dp"
                                 android:layout_marginTop="5dp"
+                                android:layout_marginStart="10dp"
                                 app:cardCornerRadius="10dp"
                                 app:strokeWidth="0.5dp"
                                 android:layout_weight="1"
@@ -309,6 +382,7 @@
                                 style="@style/ClickableTextInputLayoutStyle"
                                 android:layout_width="0dp"
                                 android:layout_height="@dimen/textInputLayoutHeight"
+                                android:visibility="gone"
                                 android:layout_marginStart="10dp"
                                 android:layout_weight="1"
                                 android:hint="Bed 1 Type">
@@ -737,54 +811,6 @@
 
                         </LinearLayout>
 
-                        <LinearLayout
-                            android:id="@+id/ll3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="vertical"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginStart="-15dp"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:layout_marginHorizontal="15dp"
-                                android:fontFamily="@font/roboto_medium"
-                                android:paddingVertical="5dp"
-                                android:text="Room’s Description"
-                                android:textAlignment="center"
-                                android:textColor="@color/secondary"
-                                android:textSize="@dimen/H4"/>
-
-                            <androidx.cardview.widget.CardView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                style="@style/CardViewTheme"
-                                android:layout_marginTop="10dp"
-                                android:layout_marginBottom="5dp"
-                                android:layout_marginHorizontal="20dp"
-                                app:cardCornerRadius="10dp"
-                                app:cardElevation="2dp">
-
-                                <EditText
-                                    android:id="@+id/roomDescriptionEt"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    style="@style/TextAppearance.AppCompat.Body1"
-                                    android:background="@null"
-                                    android:minHeight="120dp"
-                                    android:maxHeight="180dp"
-                                    android:hint="Describe the room"
-                                    android:gravity="start"
-                                    android:padding="8dp"/>
-
-                            </androidx.cardview.widget.CardView>
-
-                        </LinearLayout>
-
                     </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -796,6 +822,53 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/frame1"
                     app:layout_constraintTop_toTopOf="parent">
+
+                    <LinearLayout
+                        android:id="@+id/ll3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_marginHorizontal="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:layout_marginHorizontal="10dp"
+                            android:fontFamily="@font/roboto_medium"
+                            android:paddingVertical="5dp"
+                            android:text="Room’s Description"
+                            android:textAlignment="center"
+                            android:textColor="@color/secondary"
+                            android:textSize="@dimen/H4"/>
+
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/CardViewTheme"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="5dp"
+                            android:layout_marginHorizontal="20dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="2dp">
+
+                            <EditText
+                                android:id="@+id/roomDescriptionEt"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                style="@style/TextAppearance.AppCompat.Body1"
+                                android:background="@null"
+                                android:minHeight="120dp"
+                                android:maxHeight="180dp"
+                                android:hint="Describe the room"
+                                android:gravity="start"
+                                android:padding="8dp"/>
+
+                        </androidx.cardview.widget.CardView>
+
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/textView"
@@ -809,7 +882,7 @@
                         android:textColor="@color/secondary"
                         android:textSize="@dimen/H4"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintTop_toBottomOf="@id/ll3"/>
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/add"
