--- a/app/src/main/res/layout/dialog_create_inclusion.xml
+++ b/app/src/main/res/layout/dialog_create_inclusion.xml
@@ -9,6 +9,7 @@
         android:layout_width="@dimen/createDialogWidth"
         style="@style/CardViewTheme"
         app:cardElevation="5dp"
+        android:layout_margin="15dp"
         app:cardCornerRadius="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
