--- a/app/src/main/res/layout/fragment_payment_types.xml
+++ b/app/src/main/res/layout/fragment_payment_types.xml
@@ -191,6 +191,7 @@
                         android:id="@+id/switch_all"
                         android:layout_width="19dp"
                         android:layout_height="19dp"
+                        android:visibility="gone"
                         app:layout_constraintEnd_toStartOf="@id/shortCode"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
