--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -199,13 +199,19 @@
 
     </style>
 
-    <style name="RoundedDialog" parent="Theme.AppCompat.Light.Dialog">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowNoTitle">true</item>
-        <item name="android:background">@color/primaryBackground</item>
-        <item name="android:windowBackground">@drawable/rounded_background</item>
-<!--        <item name="windowBac"-->
+    <style name="Theme.AppBottomSheetDialogTheme" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/CustomBottomSheetStyle</item>
+    </style>
 
+    <style name="CustomBottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@drawable/rounded_border_white</item>
+    </style>
+
+    <style name="RoundedDialogTheme" parent="Theme.AppBottomSheetDialogTheme">
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowAnimationStyle">@style/DialogAnimation</item>
     </style>
 
     <style name="GhraphsHeading">
