--- a/app/src/main/res/layout/item_remaining_inventory.xml
+++ b/app/src/main/res/layout/item_remaining_inventory.xml
@@ -12,10 +12,9 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="#E6ECF5"
+        android:background="#E8F3C1"
         android:orientation="horizontal">
 
         <TextView
@@ -109,7 +108,6 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_weight="1"
-                android:background="@drawable/inventory_edit_background"
                 android:cursorVisible="true"
                 android:focusable="true"
                 app:cardElevation="0dp"
@@ -118,6 +116,8 @@
                 android:inputType="number"
                 android:maxLength="3"
                 android:text="6"
+                app:strokeWidth="0dp"
+                android:backgroundTint="#E8F3C1"
                 app:layout_constraintEnd_toStartOf="@id/inventory_2"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="@id/g1"
@@ -143,9 +143,11 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_gravity="center"
+                app:strokeWidth="0dp"
                 app:cardCornerRadius="0dp"
                 android:elevation="0dp"
                 android:maxLength="3"
+                android:backgroundTint="#E8F3C1"
                 android:layout_weight="1"
                 android:background="@drawable/inventory_edit_background"
                 android:text="6">
@@ -169,6 +171,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="1"
+                app:strokeWidth="0dp"
+                android:backgroundTint="#E8F3C1"
                 app:cardCornerRadius="0dp"
                 android:elevation="0dp"
                 android:maxLength="3"
@@ -191,10 +195,12 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:maxLength="3"
+                app:strokeWidth="0dp"
                 app:layout_constraintEnd_toStartOf="@id/inventory_5"
                 app:layout_constraintStart_toEndOf="@id/inventory_3"
                 app:layout_constraintTop_toTopOf="parent"
                 app:cardCornerRadius="0dp"
+                android:backgroundTint="#E8F3C1"
                 android:elevation="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="1"
@@ -216,6 +222,8 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:maxLength="3"
+                app:strokeWidth="0dp"
+                android:backgroundTint="#E8F3C1"
                 android:layout_gravity="center"
                 app:layout_constraintStart_toEndOf="@id/inventory_4"
                 app:layout_constraintEnd_toStartOf="@id/inventory_6"
@@ -240,10 +248,12 @@
                 android:id="@+id/inventory_6"
                 style="@style/inventoryText"
                 android:layout_width="0dp"
+                app:strokeWidth="0dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:maxLength="3"
                 app:cardCornerRadius="0dp"
+                android:backgroundTint="#E8F3C1"
                 app:layout_constraintEnd_toStartOf="@id/inventory_7"
                 app:layout_constraintStart_toEndOf="@id/inventory_5"
                 app:layout_constraintTop_toTopOf="parent"
@@ -268,6 +278,8 @@
                 android:layout_height="match_parent"
                 android:maxLength="3"
                 android:layout_gravity="center"
+                android:backgroundTint="#E8F3C1"
+                app:strokeWidth="0dp"
                 app:layout_constraintStart_toEndOf="@id/inventory_6"
                 app:layout_constraintEnd_toStartOf="@id/inventory_8"
                 app:layout_constraintTop_toTopOf="parent"
@@ -295,6 +307,8 @@
                 android:maxLength="3"
                 app:cardCornerRadius="0dp"
                 android:elevation="0dp"
+                app:strokeWidth="0dp"
+                android:backgroundTint="#E8F3C1"
                 app:layout_constraintStart_toEndOf="@id/inventory_7"
                 app:layout_constraintEnd_toStartOf="@id/inventory_9"
                 app:layout_constraintTop_toTopOf="parent"
@@ -319,6 +333,8 @@
                 android:layout_gravity="center"
                 android:maxLength="3"
                 app:cardCornerRadius="0dp"
+                android:backgroundTint="#E8F3C1"
+                app:strokeWidth="0dp"
                 android:elevation="0dp"
                 app:layout_constraintStart_toEndOf="@id/inventory_8"
                 app:layout_constraintEnd_toStartOf="@id/inventory_10"
@@ -344,11 +360,13 @@
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:maxLength="3"
+                android:backgroundTint="#E8F3C1"
                 app:layout_constraintStart_toEndOf="@id/inventory_9"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:cardCornerRadius="0dp"
                 android:elevation="0dp"
+                app:strokeWidth="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_weight="1"
                 android:text="6">
