--- a/app/src/main/res/layout/fragment_create_rate_type.xml
+++ b/app/src/main/res/layout/fragment_create_rate_type.xml
@@ -229,6 +229,7 @@
                 android:background="@color/secondaryBackground"
                 android:hint="Company Name"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:layout_marginStart="10dp"
                 style="@style/ClickableTextInputLayoutStyle"
                 app:endIconMode="custom"
@@ -252,6 +253,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:hint="Room Type"
+                android:visibility="gone"
                 style="@style/ClickableTextInputLayoutStyle"
                 app:endIconMode="custom"
                 app:endIconTint="@color/black">
@@ -265,6 +267,7 @@
                     android:clickable="true"
                     android:cursorVisible="false"
                     android:textSize="@dimen/H5"
+                    android:singleLine="true"
                     android:text="Select Room Type"
                     android:textColorHint="@drawable/hint_selector"
                     android:textColor="@color/secondary" />
@@ -308,8 +311,11 @@
                     android:layout_height="match_parent"
                     android:fontFamily="@font/roboto"
                     android:textSize="@dimen/H5"
-                    android:hint="Room Type"
+                    android:text="Select Meal Plan"
                     android:inputType="text"
+                    android:editable="false"
+                    android:focusable="false"
+                    android:cursorVisible="false"
                     android:textColorHint="@drawable/hint_selector"
                     android:textColor="@color/secondary"
                     android:clickable="true" />
