--- a/app/src/main/res/layout/item_roomplan_price.xml
+++ b/app/src/main/res/layout/item_roomplan_price.xml
@@ -13,7 +13,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/primaryBackground"
@@ -121,7 +120,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="@id/g1"
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="0.5dp"
+            app:strokeWidth="0dp"
+            android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c2">
@@ -143,7 +143,9 @@
             app:layout_constraintStart_toEndOf="@id/c1"
             app:layout_constraintTop_toTopOf="parent"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            app:strokeWidth="0dp"
+            android:backgroundTint="@color/primaryBackground"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c3">
             <TextView
@@ -164,8 +166,10 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c2"
             app:cardCornerRadius="0dp"
+            android:backgroundTint="@color/primaryBackground"
+
             app:layout_constraintTop_toTopOf="parent"
-            app:strokeWidth="0.5dp"
+            app:strokeWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c4">
             <TextView
@@ -186,7 +190,9 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c3"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            android:backgroundTint="@color/primaryBackground"
+
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c5">
@@ -208,7 +214,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c4"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            android:backgroundTint="@color/primaryBackground"
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c6">
@@ -229,8 +236,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c5"
+            android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c7">
@@ -252,7 +260,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c6"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            android:backgroundTint="@color/primaryBackground"
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c8">
@@ -274,7 +283,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c7"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            android:backgroundTint="@color/primaryBackground"
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c9">
@@ -296,8 +306,9 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c8"
             app:layout_constraintTop_toTopOf="parent"
+            android:backgroundTint="@color/primaryBackground"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            app:strokeWidth="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/c100">
             <TextView
@@ -317,7 +328,8 @@
             android:layout_height="match_parent"
             app:layout_constraintStart_toEndOf="@id/c9"
             app:cardCornerRadius="0dp"
-            app:strokeWidth="0.5dp"
+            android:backgroundTint="@color/primaryBackground"
+            app:strokeWidth="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
@@ -344,6 +356,8 @@
         android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@+id/layout1"
         tools:listitem="@layout/item_ota_price"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         />
 
 
